# cpp-codec

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
interface/: codec.hpp
src/: decoder.cpp
src/implement/: encoder.cpp
